--- a/custom.css
+++ b/custom.css
@@ -91,6 +91,7 @@ body {
 
 .w3-card-4 {
     height: 300px;
+    overflow: auto;
 }
 
 /* Responsive columns - one column layout (vertical) on small screens */
@@ -104,4 +105,5 @@ body {
 
 .navbar {
     background-color: rgb(27, 17, 17);
+    overflow: auto;
 }
